// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts \`disabled\` prop 1`] = `
.emotion-0 {
  padding: 10px 15px;
  border: 0;
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: bold;
  cursor: pointer;
}

.emotion-0:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.emotion-0:disabled {
  background: lightgrey;
  color: #bbbbbb;
  cursor: not-allowed;
}

<button
  class="emotion-0 emotion-1"
  disabled=""
>
  button
</button>
`;

exports[`accepts \`theme\` prop 1`] = `
.emotion-0 {
  padding: 10px 15px;
  border: 0;
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: bold;
  background: black;
  color: white;
  cursor: pointer;
}

.emotion-0:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  background: white;
  color: black;
}

.emotion-0:disabled {
  background: lightgrey;
  color: #bbbbbb;
  cursor: not-allowed;
}

<button
  class="emotion-0 emotion-1"
>
  button
</button>
`;

exports[`renders 1`] = `
.emotion-0 {
  padding: 10px 15px;
  border: 0;
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: bold;
  cursor: pointer;
}

.emotion-0:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.emotion-0:disabled {
  background: lightgrey;
  color: #bbbbbb;
  cursor: not-allowed;
}

<button
  class="emotion-0 emotion-1"
>
  button
</button>
`;
